Closed Bug 183681 Opened 22 years ago Closed 22 years ago

Java games at Pogo.com crash

Categories

(Camino Graveyard :: Plug-ins, defect)

PowerPC
macOS
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED
Camino0.7

People

(Reporter: sfraser_bugs, Assigned: sfraser_bugs)

References

()

Details

(Keywords: crash, Whiteboard: trunk)

Attachments

(3 files)

The Java games at Pogo.com crash Chimera pretty reliably.

Thread 0 Crashed:
 #0   0x17072778 in ZZN16nsIScriptContext6GetIIDEvE3iid
 #1   0x17cf92e8 in JNIEnv_::NewGlobalRef(_jobject*) (MRJSession.cpp:818)
 #2   0x17cdf4b4 in ToGlobalRef(JNIEnv_*, _jobject*)
(LiveConnectNativeMethods.cpp:186)
 #3   0x17cfd594 in GetMemberMessage::execute(JNIEnv_*)
(LiveConnectNativeMethods.cpp:507)
 #4   0x17ce02bc in MessageRunnable::Run() (LiveConnectNativeMethods.cpp:382)
 #5   0x1704715c in handleRunnableEvent(JVMRunnableEvent*) (nsJVMManager.cpp:300)
 #6   0x018c5760 in PL_HandleEvent (plevent.c:596)
 #7   0x018c5508 in PL_ProcessPendingEvents (plevent.c:527)
 #8   0x018c7d7c in nsEventQueueImpl::ProcessPendingEvents() (nsEventQueue.cpp:392)
 #9   0x14d5b640 in -[EventQueueHandler eventTimer:] (nsToolkit.mm:206)
 #10  0x907e521c in __NSFireTimer
 #11  0x90163888 in __CFRunLoopDoTimer
 #12  0x901493e0 in __CFRunLoopRun
 #13  0x9018157c in CFRunLoopRunSpecific
 #14  0x92ba34cc in RunCurrentEventLoopInMode
 #15  0x92bb32f4 in ReceiveNextEventCommon
 #16  0x92bda280 in BlockUntilNextEventMatchingListInMode
 #17  0x93082184 in _DPSNextEvent
 #18  0x930ccf84 in -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:]
 #19  0x930ca500 in -[NSApplication run]
 #20  0x930d2598 in NSApplicationMain
 #21  0x000026fc in main (main.m:53)
 #22  0x000023f8 in _start (crt.c:267)
 #23  0x00002278 in start

There are a bunch of threading assertions prior to the crash.
Blocker status for now.
Severity: normal → blocker
Target Milestone: --- → Chimera0.7
Have a fix for this.
Assignee: beard → sfraser
The problem here was a mismatch between the JNINativeInterface_ table of
function pointers between the sun-java jni.h header, and the JavaVM.framework
header. Apple added padding  at the start of the struct in Macho for CFM
function pointers, and padding at the end in CFM for Macho function pointers.
This patch to jni_md.h conditionally adds padding for Macho, to match Apple's.
Fix checked in. We'll need this on the trunk too.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Whiteboard: trunk
Blocks: 131288
Hmmm. This url is crashing for me in the 12/07 build. The stack trace shows 
jsj_ConnectToJavaVM were the problem occurs. I didn't have this problem with the
previous build (12/06). Attaching stack trace..
Attached file Stack trace
Chris: can you reproduce the crash on other machines?
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Using the same URL, I can reproduce the crash on my iBook (500mhz) running
10.2.2. Same stack trace as the Power Mac. Another site I found that crashes on
both computer is http://www.aim.com. Attempting to launch the AIM express applet
results in a crash.
*** Bug 184553 has been marked as a duplicate of this bug. ***
I have a fix for this. I forgot to check in the OJI part of the patch.
Status: REOPENED → ASSIGNED
This is really fixed now.

I noticed that the JNIInvokeInterface_ struct also had CFM/Macho padding, so I
added a macro to jni_md.h to pad that like we do JNINativeInterface_. However,
we don't use JNIInvokeInterface_ anywhere, so no code/data changse are required.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
Excellent... Pogo.com no longer crashes when activating a java based game.
Verified in the 2002-12-10-04 NB under 10.2.2 and 10.2.1. 
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: