Fix mismatch between jni.h  versions in sun-java/include, and Apple's JavaVM.framework, adding padding so that function pointers line up for Mach-O. Fixes bug 183681, r=beard.